--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <title>HTML Images</title>
   </head>
   <body>
-    <!-- Your code here -->
+    <img
+     src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"
+     alt="A lion"
+     title="Lion king of the Jungle">
+     <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fen.wikipedia.org%2Fwiki%2FKenya&psig=AOvVaw1aK66MSTJfAid56uHBk9Mf&ust=1653983111419000&source=images&cd=vfe&ved=0CAwQjRxqFwoTCICe-7bdhvgCFQAAAAAdAAAAABAD" 
+     alt="Kenya"
+     title="Our land">
+     <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fresearch.hktdc.com%2Fen%2Farticle%2FMzQ4NDcwNjc2&psig=AOvVaw1aK66MSTJfAid56uHBk9Mf&ust=1653983111419000&source=images&cd=vfe&ved=0CAwQjRxqFwoTCICe-7bdhvgCFQAAAAAdAAAAABAJ"
+      alt="Nairobi"
+      title="Our City">
   </body>
 </html>
